# coraline-dev-plugin

./: CMakeLists.txt  README.md
template/: CMakeLists-gen.in  CMakeLists.txt
template/coralineplugin/: loader.cpp  myplugin_plugin.cpp
template/include/: loader.h  myplugin_globals.h  myplugin_plugin.h
template/shared/: init.js
